test_programs/compile_failure/noirc_frontend_tests_visibility_errors_if_type_alias_aliases_more_private_type_in_generic/src/main.nr

    pub struct Generic<T> { value: T }
    struct Foo {}
    pub type Bar = Generic<Foo>;
    pub fn no_unused_warnings() {
        let _ = Foo {};
        let _: Bar = Generic { value: Foo {} };
    }
    fn main() {}
    